footer in progress

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Eric Arndt - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development 1 - Eric Arndt - Course Assignment Portal ">
     <meta name="author" content="Eric Arndt">
+    <script src="scripts/solar-system.js" defer></script>
 </head>
 <body>
     <header class="head-wrapper">
@@ -56,6 +57,10 @@
             </section>
         </div>
     </main>
-    
+    <footer>
+        <p>&copy; <span id="currentYear"></span> 🌲 Eric E. Arndt 🌲 Washington, USA</p>
+        <img src="images/flag-of-usa.png" alt="Eric Arndt Profile pic">
+        <p> Last Modified on: <span id="lastModified"></span></p>
+    </footer>
 </body>
 </html>
