footer and footer resizing done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Eric Arndt - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development 1 - Eric Arndt - Course Assignment Portal ">
     <meta name="author" content="Eric Arndt">
-    <script src="scripts/solar-system.js" defer></script>
+    <script src="scripts/getDates.js" defer></script>
 </head>
 <body>
     <header class="head-wrapper">
@@ -52,15 +52,17 @@
                     <h2>Information</h2>
                 </div>
                 <div class="card-content">
-                    <!-- Content goes here -->
+                    <p>Federal Way, Washington</p>
                 </div>
             </section>
         </div>
     </main>
     <footer>
-        <p>&copy; <span id="currentYear"></span> 🌲 Eric E. Arndt 🌲 Washington, USA</p>
-        <img src="images/flag-of-usa.png" alt="Eric Arndt Profile pic">
-        <p> Last Modified on: <span id="lastModified"></span></p>
+        <div class="footer-content">
+            <p>&copy; <span id="currentYear"></span> 🌲 Eric E. Arndt 🌲 Washington, USA <img src="images/flag-of-usa.png" alt="USA Flag pic" class="footer-img"></p>
+        </div>
+        <p class="last-modified"> Last Modified on: <span id="lastModified"></span></p>
     </footer>
+    
 </body>
 </html>
