placeholders for info card

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                 </div>
                 <div class="card-content">
                     <p>Federal Way, Washington</p>
+                    <p>☀️ 56°F - Sunny</p>
+                    <p>Page Visits: 7</p>
                 </div>
             </section>
         </div>
