change title name Palette to Schema

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -32,7 +32,7 @@
       <p>How does the chamber of commerce promote new or small businesses?</p> 
       <p>What does the population growth for the area look like?</p>
       <h2>Style Guide</h2>
-      <h3>Color Palette</h3>
+      <h3>Color Schema</h3>
       <p class='box skyblue'></p> primary-color: #97C6EC
       <p class='box azure'></p> secondary-color: #3981FE
       <p class='box pennblue'></p> tertiary-color: #001959
