--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -63,7 +63,9 @@
     </main>
 
     <footer>
+    <a href="../index.html">Back To Home Page</a>
     <p>&copy; 2025 🏙️ Chamber Site Plan 🏙️ Eric Arndt 🏙️ WDD 230</p>
+    
     </footer>
 
   </body>
