--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eric Arndt | Chamber Site Plan | WDD 230</title>
-    <meta name="description" content="The rafting site plan will include the purpose of the site, intended audience,branding information, style guide, color palette and more for this project. ">
+    <meta name="description" content="The chamber site plan will include the name and purpose of the site, scenarios, color schema, typography, wireframe and more for this project. ">
     <meta name="author" content="Eric Arndt">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
