--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="card-content">
                     <ul>
                         <li><span>Week 01: </span><a href="./week01/chamber-site-plan.html">Chamber Plan</a></li>
-                        <li><span>Week 02: </span><a href="#">link</a></li>
+                        <li><span>Week 02: </span><a href="./week02.design.html">Web Design Activity</a></li>
                         <li><span>Week 03: </span><a href="#">link</a></li>
                         <li><span>Week 04: </span><a href="#">link</a></li>
                         <li><span>Week 05: </span><a href="#">link</a></li>
