--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Eric Arndt - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development 1 - Eric Arndt - Course Assignment Portal ">
     <meta name="author" content="Eric Arndt">
+    <link rel="icon" href="favicon.ico">
     <script src="scripts/getDates.js" defer></script>
 </head>
 <body>
