--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <title>Eric Arndt - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development 1 - Eric Arndt - Course Assignment Portal ">
     <meta name="author" content="Eric Arndt">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Eric Arndt - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://e-arndt.github.io/wdd230/federal-way-pano1.png">
+    <meta property="og:url" content="https://e-arndt.github.io/wdd230/index.html">
+    
     <link rel="icon" href="favicon.ico">
     <script src="scripts/getDates.js" defer></script>
 </head>
