--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="card-content">
                     <ul>
                         <li><span>Week 01: </span><a href="./week01/chamber-site-plan.html">Chamber Plan</a></li>
-                        <li><span>Week 02: </span><a href="./week02/design.html">Web Design Activity</a></li>
+                        <li><span>Week 02: </span><a href="./week02/design.html">Web Design Activity</a>, <a href="https://codepen.io/e-arndt/pen/JojrZqZ" target="_blank">Hamburger Code Pen</a>, <a href="./week02/bom.html">BOM TOP 10</a></li>
                         <li><span>Week 03: </span><a href="#">link</a></li>
                         <li><span>Week 04: </span><a href="#">link</a></li>
                         <li><span>Week 05: </span><a href="#">link</a></li>
