update favicon links with proper type

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:image" content="https://e-arndt.github.io/wdd230/federal-way-pano1.png">
     <meta property="og:url" content="https://e-arndt.github.io/wdd230/index.html">
     
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="scripts/getDates.js" defer></script>
 </head>
 <body>
