--- a/week02/bom.html
+++ b/week02/bom.html
@@ -7,7 +7,7 @@
     <title>BOM Top 10</title>
     <meta name="description" content="WDD 230 - Web Frontend Development 1 - Eric Arndt - BOM Top 10 ">
     <meta name="author" content="Eric Arndt">
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="favicon.png" type="image/png">
     <script src="scripts/bom.js" defer></script>
 </head>
 <body>
