hamburger menu and resizings

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <header class="head-wrapper">
         <img src="images/profile.png" alt="Eric Arndt Profile pic">
         <div class="header-title"><span>Eric E. Arndt</span></div>
+        <a id="menu" href="#"></a>
     </header>
-    <nav id="nav">
+    <nav id="nav" class="navigation">
         <ul>
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#">Chamber</a></li>
