Dark Mode fixes, contrast and transitions

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 </head>
 <body>
     <header class="head-wrapper">
+        <div id="dMode">
+            <img id="modeIcon" src="images/dark-reader-icon.png" alt="Dark Reader Icon">
+            <span id="modeText">Go Dark</span>
+        </div>
         <img src="images/profile.png" alt="Eric Arndt Profile pic">
         <div class="header-title"><span>Eric E. Arndt</span></div>
         <a id="menu" href="#"></a>
