--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,8 +27,8 @@
 <body>
     <header class="head-wrapper">
         <img src="images/chamberLogo.png" alt="Logo FW Chamber of Commerce">
-        <div class="header-title"><span>Greater Federal Way</span>
-            <span>Chamber of Commerce</span></div>
+        <div class="header-title"><h1><span>Greater Federal Way</span>
+            <span>Chamber of Commerce</span></h1></div>
         <a id="menu" href="#"></a>
     </header>
     <nav id="nav" class="navigation">
