--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <nav id="nav" class="navigation">
         <ul>
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="#">Chamber</a></li>
+            <li><a href="https://e-arndt.github.io/wdd230/chamber/index.html">Chamber</a></li>
             <li><a href="#">Site Plan</a></li>
             <li><a href="#">Form</a></li>
         </ul>
