reduce image size

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,7 +40,7 @@
         </ul>
     </nav>
     <main>
-        <img class="hero" src="images/federal_way.png" alt="aerial image of Federal Way">
+        <img class="hero" src="images/federal_way.webp" alt="aerial image of Federal Way">
         <div class="main">
             <div class="row1">
             <section class="card">
