--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
     </header>
     <nav id="nav" class="navigation">
         <ul>
-            <li class="active"><a href="index.html">Home</a></li>
+            <li class="active"><a href="https://e-arndt.github.io/wdd230/index.html">Home</a></li>
             <li><a href="#">Join the Chamber</a></li>
             <li><a href="#">Business Directory</a></li>
             <li><a href="#">Contact Us</a></li>
