--- a/chamber/index.html
+++ b/chamber/index.html
@@ -92,4 +92,21 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer-content">
+            <div class="f_logo">
+            <img src="images/chamberLogo.png" alt="Logo FW Chamber of Commerce"></div>
+            <div class="f_name">
+            <p>Greater Federal Way Chamber of Commerce</p></div>
+            <div class="f_address">
+            <p>The Chamber of Commerce Building</p>
+            <p>31919 1st Avenue South, Suite 202.</p>
+            <p>Federal Way, WA 98003</p></div>
+            <div class="f_ph_email">
+            <p>📧info@fedwaychamber.com</p>
+            <p>📞253.838.2605</p></div>
+            <p>&copy;<span id="currentYear"></span> 🏙️ Eric E. Arndt 🏙️ Washington, USA <img src="images/flag-of-usa.png" alt="USA Flag pic" class="footer-img"></p>
+        </div>
+        <p class="last-modified"> Last Modified on: <span id="lastModified"></span></p>
+    </footer>
 </body>
