fixes and refinments mostly to footer

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -105,7 +105,7 @@
             <div class="f_ph_email">
             <p>📧info@fedwaychamber.com</p>
             <p>📞253.838.2605</p></div>
-            <p>&copy;<span id="currentYear"></span> 🏙️ Eric E. Arndt 🏙️ Washington, USA <img src="images/flag-of-usa.png" alt="USA Flag pic" class="footer-img"></p>
+            <p>&copy;<span id="currentYear"></span> 🏙️ Eric E. Arndt 🏙️ WDD-230 🏙️ Washington, USA <img src="images/flag-of-usa.png" alt="USA Flag pic" class="footer-img"></p>
         </div>
         <p class="last-modified"> Last Modified on: <span id="lastModified"></span></p>
     </footer>
