Lazy Load, Responsive Image

--- a/week03/lazyload.html
+++ b/week03/lazyload.html
@@ -43,6 +43,7 @@
             <p>&copy; <span id="currentYear"></span> 🌲 Eric E. Arndt 🌲 Washington, USA <img src="images/flag-of-usa.png" alt="USA Flag pic" class="footer-img"></p>
         </div>
         <p class="last-modified"> Last Modified on: <span id="lastModified"></span></p>
+        <a href="../index.html">Back To Home Page</a>
     </footer>
 </body>
 </html>
