--- a/week03/bom.html
+++ b/week03/bom.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <h1>📖 Book of Mormon - Top 10</h1>
+    <h3>Local Storage Version</h3>
 <main>
 	<label for="favchap">Enter Book and Chapter: </label>
 	<input type="text" id="favchap" placeholder="Alma 5">
