--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
         </ul>
     </nav>
     <main>
+        <div class="hero">
+            <picture>
+                <source srcset="images/oakland-small.webp" media="(max-width: 600px)">
+                <source srcset="images/oakland-medium.webp" media="(max-width: 960px)">
+                <img src="images/oakland-large.webp" alt="Oakland Temple" width="1200" height="800">
+            </picture>
+            <div class="herolabel">
+                <p>Oakland California Temple</p>
+            </div>
+        </div>
         <h1>WDD 230: Web Frontend Development</h1>
     
         <div class="main">
@@ -71,6 +81,9 @@
                     <p>Page Visits: 7</p>
                 </div>
             </section>
+        </div>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d103946.54774498336!2d-122.39589393436466!3d47.301822683891935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1742457574047!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
     <footer>
