--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Responsive Images Demo</h1></header>
     <main>
-        <div class="hero"></div>
+        <div class="hero">
             <picture>
                 <source srcset="images/hero-small.webp" media="(max-width: 700px)">
                 <source srcset="images/hero-medium.webp" media="(max-width: 850px)">
