page visits resizing

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                 <div class="card-content">
                     <p>Federal Way, Washington</p>
                     <p>☀️ 56°F - Sunny</p>
-                    <p>Page Visits: 7</p>
+                    <p>Your Page Visits: <b class="visits">-</b></p>
                 </div>
+                    
             </section>
         </div>
         <div class="map">
