--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </section>
         </div>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d103946.54774498336!2d-122.39589393436466!3d47.301822683891935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1742457574047!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d103946.54774498336!2d-122.39589393436466!3d47.301822683891935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1742457574047!5m2!1sen!2sus" width="600" height="450" style="border: 3px solid var(--border-color); border-radius:10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Interactive Map of Federal Way, WA"></iframe>
         </div>
     </main>
     <footer>
