--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -92,37 +92,37 @@
             <div class="discover-pics">
                 <section class="fw-pic1">
                     <figure>
-                        <img src="images/woodbridge-corp-park.webp" alt="Woodbridge Corporate Park, formerly Weyerhaeuser HQ" loading="lazy" width="690" height="600">
+                        <img src="images/woodbridge.webp" alt="Woodbridge Corporate Park, formerly Weyerhaeuser HQ" loading="lazy" width="960" height="661">
                         <figcaption>Woodbridge Corporate Park</figcaption>
                     </figure>
                 </section>
                 <section class="fw-pic1">
                     <figure>
-                        <img src="images/aquatic-center.webp" alt="1990 Goodwill Games Aquatic Center" loading="lazy" width="1200" height="800">
+                        <img src="images/aquatic-center.webp" alt="1990 Goodwill Games Aquatic Center" loading="lazy" width="960" height="640">
                         <figcaption>King County Aquatic Center</figcaption>
                     </figure>
                 </section>
                 <section class="fw-pic1">
                     <figure>
-                        <img src="images/wild-waves.webp" alt="Wild Wave Water & Theme Park" loading="lazy" width="1200" height="668">
+                        <img src="images/wild-waves.webp" alt="Wild Wave Water & Theme Park" loading="lazy" width="960" height="534">
                         <figcaption>Wild Waves Water Park</figcaption>
                     </figure>
                 </section>
                 <section class="fw-pic1">
                     <figure>
-                        <img src="images/office-hotel.webp" alt="The Centre Building" loading="lazy" width="1280" height="960">
+                        <img src="images/office-hotel.webp" alt="The Centre Building" loading="lazy" width="960" height="719">
                         <figcaption>The Centre Business Building</figcaption>
                     </figure>
                 </section>
                 <section class="fw-pic1">
                     <figure>
-                        <img src="images/dash-point.webp" alt="Beach at Dash Point Park" loading="lazy" width="925" height="580">
+                        <img src="images/dash-point-beach.webp" alt="Beach at Dash Point Park" loading="lazy" width="960" height="540">
                         <figcaption>Dash Point Park</figcaption>
                     </figure>
                 </section>
                 <section class="fw-pic1">
                     <figure>
-                        <img src="images/pac.webp" alt="Performing Arts Center - PAC" loading="lazy" width="925" height="580">
+                        <img src="images/pac.webp" alt="Performing Arts Center - PAC" loading="lazy" width="960" height="640">
                         <figcaption>Performing Arts Center</figcaption>
                     </figure>
                 </section>
