finalize Discover page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -47,7 +47,7 @@
                         <h2>Welcome</h2>
                     </div>
                     <div class="welcome-card-content">
-                        <h3><span class="visit-msg"></span></h3>
+                        <h3><span class="visit-msg">Welcome!</span></h3>
                     </div>
                 </section>
                 <section class="discover-card">
@@ -161,51 +161,48 @@
                         <h2>Calendar</h2>
                     </div>
                     <div class="calendar-card-content">
-                        <iframe src="https://calendar.google.com/calendar/embed?src=21f364b02eab671489e31fd9aaa52d68543a9b5f54dedece917eaaa8fcc585bb%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="width: 100%; max-width: 700px; height: 400px;" 
-                        frameborder="0" 
-                        scrolling="no"
-                        loading="lazy"></iframe>
+                        <iframe src="https://calendar.google.com/calendar/embed?src=21f364b02eab671489e31fd9aaa52d68543a9b5f54dedece917eaaa8fcc585bb%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="width: 100%; max-width: 700px; height: 400px;" loading="lazy" title="Interactive Calendar"></iframe>
                     </div>
                 </section>
             </div>
 
             <div class="discover-pics">
-                <section class="fw-pic1">
+                <div class="fw-pic1">
                     <figure>
                         <img src="images/woodbridge.webp" alt="Woodbridge Corporate Park, formerly Weyerhaeuser HQ" loading="lazy" width="960" height="661">
                         <figcaption>Woodbridge Corporate Park</figcaption>
                     </figure>
-                </section>
-                <section class="fw-pic1">
+                </div>
+                <div class="fw-pic1">
                     <figure>
                         <img src="images/aquatic-center.webp" alt="1990 Goodwill Games Aquatic Center" loading="lazy" width="960" height="640">
                         <figcaption>King County Aquatic Center</figcaption>
                     </figure>
-                </section>
-                <section class="fw-pic1">
+                </div>
+                <div class="fw-pic1">
                     <figure>
                         <img src="images/wild-waves.webp" alt="Wild Wave Water & Theme Park" loading="lazy" width="960" height="534">
                         <figcaption>Wild Waves Water Park</figcaption>
                     </figure>
-                </section>
-                <section class="fw-pic1">
+                </div>
+                <div class="fw-pic1">
                     <figure>
                         <img src="images/office-hotel.webp" alt="The Centre Building" loading="lazy" width="960" height="719">
                         <figcaption>The Centre Business Building</figcaption>
                     </figure>
-                </section>
-                <section class="fw-pic1">
+                </div>
+                <div class="fw-pic1">
                     <figure>
                         <img src="images/dash-point-beach.webp" alt="Beach at Dash Point Park" loading="lazy" width="960" height="540">
                         <figcaption>Dash Point Park</figcaption>
                     </figure>
-                </section>
-                <section class="fw-pic1">
+                </div>
+                <div class="fw-pic1">
                     <figure>
                         <img src="images/pac.webp" alt="Performing Arts Center - PAC" loading="lazy" width="960" height="640">
                         <figcaption>Performing Arts Center</figcaption>
                     </figure>
-                </section>
+                </div>
             </div>
         </div>
     </main>
