--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
             <li class="active"><a href="https://e-arndt.github.io/wdd230/index.html">Home</a></li>
             <li><a href="#">Join the Chamber</a></li>
             <li><a href="#">Business Directory</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="https://e-arndt.github.io/wdd230/chamber/discover.html">Discover</a></li>
         </ul>
     </nav>
     <main>
