correct title and description

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eric Arndt - WDD 230 - Chamber of Commerce</title>
-    <meta name="description" content="WDD 230 - Web Frontend Development 1 - Eric Arndt - Chamber of Commerce Home Page ">
+    <title>Eric Arndt - WDD 230 - Chamber of Commerce Discover Page</title>
+    <meta name="description" content="WDD 230 - Web Frontend Development 1 - Eric Arndt - Chamber of Commerce Discovery Page ">
     <meta name="author" content="Eric Arndt">
 
     <!-- Open Graph Meta Tags -->
