--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,11 +67,10 @@
             <div class="card-column">
                 <section class="card">
                     <div class="card-header">
-                        <h2>Weather</h2>
+                        <h2>Live Weather</h2>
                     </div>
                     <div class="card-content">
                         <div id="weather-info">
-                            <p>Live Weather</p>
                             <p>Federal Way, Washington</p>
                             <p>Temperature: <span id="temperature">--</span> °F</p>
                             <p>Condition: <span id="current-condition">--</span></p>
@@ -99,7 +98,15 @@
                     <h2>Member Spotlight</h2>
                 </div>
                 <div class="card-content">
-                    <p>Cool Business</p>
+                    <div class="spot-img">
+                        <img src="images/skc-ems.webp" alt="Sount King County EMS logo" loading="lazy" width="113" height="120">
+                    </div>
+                    <div class="spot-contact">
+                        <p>🔥 Too hot? We’ve got your back</p>
+                        <p>📧 cao.web@southkingfire.org</p>
+                        <p>📞 253-839-6234</p>
+                    </div>
+                    <a href="https://southkingfire.org/?form=MG0AV3" target="_blank">website</a>
                 </div>
             </section>
             <section class="card">
@@ -107,7 +114,15 @@
                     <h2>Member Spotlight</h2>
                 </div>
                 <div class="card-content">
-                    <p>Cool Business</p>
+                    <div class="spot-img">
+                        <img src="images/lhws.webp" alt="Lakehaven water & sewer logo" loading="lazy" width="241" height="77">
+                    </div>
+                    <div class="spot-contact">
+                        <p>💩 Change murky into the remarkable</p>
+                        <p>📧 lakehaven@lakehaven.org</p>
+                        <p>📞 253-941-1516</p>
+                    </div>
+                    <a href="https://www.lakehaven.org/" target="_blank">website</a>
                 </div>
             </section>
             <section class="card">
@@ -115,7 +130,15 @@
                     <h2>Member Spotlight</h2>
                 </div>
                 <div class="card-content">
-                    <p>Cool Business</p>
+                    <div class="spot-img">
+                        <img src="images/fw_logo.webp" alt="City of Federal Way logo" loading="lazy" width="240" height="52">
+                    </div>
+                    <div class="spot-contact">
+                        <p>✨ Centered on oportunity</p>
+                        <p>📧 info@cityoffederalway.com</p>
+                        <p>📞 253-835-7000</p>
+                    </div>
+                    <a href="https://www.federalwaywa.gov/" target="_blank">website</a>
                 </div>
             </section>
             </div>
