member fee table

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -79,14 +79,63 @@
                 </section>
                 <section class="card">
                     <div class="card-header">
-                        <h2>Weather</h2>
+                        <h2>Membership Annual Fee</h2>
                     </div>
                     <div class="card-content">
-                        <div id="weather-info">
-                            <p>Live Weather</p>
-                            <p>Federal Way, Washington</p>
-                            <p>Temperature: <span>99</span> °F</p>
-                            <p>Condition: <span>Hot Ya'll</span></p>
+                        <div id="fee-table">
+                            <table border="1">
+                                <tr>
+                                  <th>Full Time Employees</th>
+                                  <th>Investment</th>
+                                  <th>$35 one-time fee</th>
+                                </tr>
+                                <tr>
+                                  <td>1 - 5</td>
+                                  <td>$401.50</td>
+                                  <td>$436.50</td>
+                                </tr>
+                                <tr>
+                                  <td>6 - 10</td>
+                                  <td>$451.00</td>
+                                  <td>$486.00</td>
+                                </tr>
+                                <tr>
+                                    <td>11 - 20</td>
+                                    <td>$539.00</td>
+                                    <td>$574.00</td>
+                                  </tr>
+                                  <tr>
+                                    <td>21 - 30</td>
+                                    <td>$660.00</td>
+                                    <td>$695.00</td>
+                                  </tr>
+                                  <tr>
+                                    <td>31 - 50</td>
+                                    <td>$830.50</td>
+                                    <td>$865.50</td>
+                                  </tr>
+                                  <tr>
+                                    <td>51 - 80</td>
+                                    <td>$1,034.00</td>
+                                    <td>$1,069.00</td>
+                                  </tr>
+                                  <tr>
+                                    <td>81 - 149</td>
+                                    <td>$1,210.00</td>
+                                    <td>$1,245.00</td>
+                                  </tr>
+                                  <tr>
+                                    <td>150 - 299</td>
+                                    <td>$1,688.50</td>
+                                    <td>$1,723.50</td>
+                                  </tr>
+                                  <tr>
+                                    <td>300+</td>
+                                    <td>Contact us</td>
+                                    <td></td>
+                                  </tr>
+                              </table>
+                              
                         </div>
                     </div>
                 </section>
