--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="scripts/getDates.js" defer></script>
+    <script src="scripts/wx.js" defer></script>
 </head>
 <body>
     <header class="head-wrapper">
@@ -76,8 +77,11 @@
                     <h2>Information</h2>
                 </div>
                 <div class="card-content">
-                    <p>Federal Way, Washington</p>
-                    <p>☀️ 56°F - Sunny</p>
+                    <div id="weather-info">
+                        <p>Federal Way, Washington</p>
+                        <p>Temperature: <span id="temperature">--</span> °F</p>
+                        <p>Condition: <span id="current-condition">--</span></p>
+                    </div>
                     <p>Your Page Visits: <b class="visits">-</b></p>
                 </div>
                     
