--- a/chamber/index.html
+++ b/chamber/index.html
@@ -167,7 +167,7 @@
                         <img src="images/lhws.webp" alt="Lakehaven water & sewer logo" loading="lazy" width="241" height="77">
                     </div>
                     <div class="spot-contact">
-                        <p>💩 Change murky into the remarkable</p>
+                        <p>💩 Change murky into remarkable</p>
                         <p>📧 lakehaven@lakehaven.org</p>
                         <p>📞 253-941-1516</p>
                     </div>
