fw-logo.webp pic showing as fw_Logo trying to force change

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -180,6 +180,7 @@
                 </div>
                 <div class="card-content">
                     <div class="spot-img">
+                        <!-- img file was fw_Logo.webp, changed it to fw_logo.webp says no changes, no push ??-->
                         <img src="images/fw_logo.webp" alt="City of Federal Way logo" loading="lazy" width="240" height="52">
                     </div>
                     <div class="spot-contact">
