Table caption, colspan last row

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -84,6 +84,9 @@
                     <div class="card-content">
                         <div id="fee-table">
                             <table border="1">
+                                <caption>
+                                    Membership Fee Table
+                                  </caption>
                                 <tr>
                                   <th>Full Time Employees</th>
                                   <th>Investment</th>
@@ -131,8 +134,7 @@
                                   </tr>
                                   <tr>
                                     <td>300+</td>
-                                    <td>Contact us</td>
-                                    <td></td>
+                                    <td colspan="2">Contact us</td>
                                   </tr>
                               </table>
                               
