Add link to forms activity

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <li><span>Week 01: </span><a href="./week01/chamber-site-plan.html">Chamber Plan</a></li>
                         <li><span>Week 02: </span><a href="./week02/design.html">Web Design</a>, <a href="https://codepen.io/e-arndt/pen/JojrZqZ" target="_blank">Code Pen</a>, <a href="./week02/bom.html">BOM</a></li>
                         <li><span>Week 03: </span><a href="./week03/images/landscape.webp" target="_blank">Webp, </a> <a href="./week03/lazyload.html">Lazy, </a> <a href="./week03/responsive-images.html">Responsive Img, </a> <a href="./week03/bom.html">Local Store</a></li>
-                        <li><span>Week 04: </span><a href="https://codepen.io/e-arndt/pen/qEByVoO" target="_blank">Code Pen</a>, <a href="./week04/tablebuild.html">Tables</a>,</li>
+                        <li><span>Week 04: </span><a href="https://codepen.io/e-arndt/pen/qEByVoO" target="_blank">Code Pen</a>, <a href="./week04/tablebuild.html">Tables</a>, <a href="./week04/Form-start/index.html">Forms</a></li>
                         <li><span>Week 05: </span><a href="#">link</a></li>
                         <li><span>Week 06: </span><a href="#">link</a></li>
                     </ul>
