--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="https://e-arndt.github.io/wdd230/chamber/index.html">Chamber</a></li>
             <li><a href="#">Site Plan</a></li>
-            <li><a href="#">Form</a></li>
+            <li><a href="form.html">Form</a></li>
         </ul>
     </nav>
     <main>
