push what I have so far

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,7 @@
     <script src="scripts/chamber.js" defer></script>
     <script src="scripts/fw-wx.js" defer></script>
 </head>
-<body>
+<body class="c-index">
     <header class="head-wrapper">
         <img src="images/chamberLogo.png" alt="Logo FW Chamber of Commerce">
         <div class="header-title"><h1><span>Greater Federal Way</span>
