finish join and ty pages

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -42,13 +42,13 @@
     </nav>
     <main class="form">
         <h1>Join the Chamber of Commerce</h1>
-        <form method="get" action="record.html" class="wf2">
+        <form method="get" action="thankyou.html" class="wf2">
             <fieldset>
                 <legend>Member Information</legend>
                 <label>First Name* <input type="text" id="fname" name="fname" required title="Enter your first name"></label>
                 <label>Last Name* <input type="text" id="lname" name="lname" required title="Enter your last name"></label>
-                <label>Title / Position <input type="text" id="title" name="title" pattern="^[a-zA-Z\s-]{7,}$" title="Enter your professional title or position"></label>
-                <label>Email* <input type="email" name="email" id="email" placeholder="someone@gmail.com" required pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{1,}$" title="Enter a valid email address"></label>
+                <label>Title / Position <input type="text" id="title" name="title" title="Enter your professional title or position"></label>
+                <label>Email* <input type="email" name="email" id="email" placeholder="someone@gmail.com" required title="Enter a valid email address"></label>
                 <label>Mobile Phone <input type="tel" id="phone" name="phone" required title="Enter your phone number"></label>
             </fieldset>
             <fieldset>
