--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -36,7 +36,11 @@
         <div class="footer-content">
             <p>&copy; <span id="currentYear"></span> 🌲 Eric E. Arndt 🌲 Washington, USA <img src="images/flag-of-usa.png" alt="USA Flag pic" class="footer-img"></p>
         </div>
-        <p class="last-modified"> Last Modified on: <span id="lastModified"></span></p>
+        <p class="last-modified"> Last Modified on: &nbsp;<span id="lastModified"></span></p>
+        <div>
+            <p>Form Timestamp: &nbsp;<span id="timestampDisplay"></span></p>
+        </div>
+        
     </footer>
     
 </body>
