--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,7 @@
     <nav id="nav" class="navigation">
         <ul>
             <li class="active"><a href="https://e-arndt.github.io/wdd230/index.html">Home</a></li>
-            <li><a href="#">Join the Chamber</a></li>
+            <li><a href="./join.html">Join the Chamber</a></li>
             <li><a href="#">Business Directory</a></li>
             <li><a href="https://e-arndt.github.io/wdd230/chamber/discover.html">Discover</a></li>
         </ul>
