fix page names and links

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,10 +33,10 @@
     </header>
     <nav id="nav" class="navigation">
         <ul>
-            <li class="active"><a href="https://e-arndt.github.io/wdd230/chamber/index.html">Chamber Home</a></li>
-            <li><a href="#">Join the Chamber</a></li>
+            <li><a href="./index.html">Chamber Home</a></li>
+            <li><a href="./join.html">Join the Chamber</a></li>
             <li><a href="#">Business Directory</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li class="active"><a href="./discover.html">Discover</a></li>
         </ul>
     </nav>
     <main>
