--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,10 +34,10 @@
     </header>
     <nav id="nav" class="navigation">
         <ul>
-            <li class="active"><a href="https://e-arndt.github.io/wdd230/index.html">Home</a></li>
+            <li class="active"><a href="../index.html">Course Home</a></li>
             <li><a href="./join.html">Join the Chamber</a></li>
             <li><a href="#">Business Directory</a></li>
-            <li><a href="https://e-arndt.github.io/wdd230/chamber/discover.html">Discover</a></li>
+            <li><a href="./discover.html">Discover</a></li>
         </ul>
     </nav>
     <main>
