--- a/chamber/join.html
+++ b/chamber/join.html
@@ -49,7 +49,7 @@
                 <label>Last Name* <input type="text" id="lname" name="lname" required title="Enter your last name"></label>
                 <label>Title / Position <input type="text" id="title" name="title" title="Enter your professional title or position"></label>
                 <label>Email* <input type="email" name="email" id="email" placeholder="someone@gmail.com" required title="Enter a valid email address"></label>
-                <label>Mobile Phone <input type="tel" id="phone" name="phone" required title="Enter your phone number"></label>
+                <label>Mobile Phone* <input type="tel" id="phone" name="phone" required title="Enter your phone number"></label>
             </fieldset>
             <fieldset>
                 <legend>Business / Organization Information</legend>
