--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -22,7 +22,7 @@
         <div id="cards"></div>
       </main>
       <footer>
-        [Enter Your Name Here] | Latter-day Prophets
+        Eric Arndt | Latter-day Prophets
       </footer>
 </body>
 </html>
