--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="scripts/getDates.js" defer></script>
+    <script src="scripts/links.js" defer></script>
     <script src="scripts/wx.js" defer></script>
 </head>
 <body>
