--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                 </div>
                 <div class="card-content">
                     <ul>
-                        <li><span>Week 01: </span><a href="./week01/chamber-site-plan.html">Chamber Plan</a></li>
-                        <li><span>Week 02: </span><a href="./week02/design.html">Web Design</a>, <a href="https://codepen.io/e-arndt/pen/JojrZqZ" target="_blank">Code Pen</a>, <a href="./week02/bom.html">BOM</a></li>
-                        <li><span>Week 03: </span><a href="./week03/images/landscape.webp" target="_blank">Webp, </a> <a href="./week03/lazyload.html">Lazy, </a> <a href="./week03/responsive-images.html">Responsive Img, </a> <a href="./week03/bom.html">Local Store</a></li>
-                        <li><span>Week 04: </span><a href="https://codepen.io/e-arndt/pen/qEByVoO" target="_blank">Code Pen</a>, <a href="./week04/tablebuild.html">Tables</a>, <a href="./week04/Form-start/index.html">Forms</a></li>
-                        <li><span>Week 05: </span><a href="https://codepen.io/e-arndt/pen/yyLQWWO" target="_blank">Code Pen, </a> <a href="./week05/new-ward-members.json" target="_blank">JSON, </a> <a href="./week05/prophets.html" target="_blank">Prophets, </a> <a href="./week05/weather.html" target="_blank">Weather, </a></li>
-                        <li><span>Week 06: </span><a href="#">link</a></li>
+                        <li class="wk01-link"><span>Week 01: </span></li>
+                        <li class="wk02-link"><span>Week 02: </span></li>
+                        <li class="wk03-link"><span>Week 03: </span></li>
+                        <li class="wk04-link"><span>Week 04: </span></li>
+                        <li class="wk05-link"><span>Week 05: </span></li>
+                        <li class="wk06-link"><span>Week 06: </span></li>
                     </ul>
                 </div>
             </section>
