--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                 </div>
                 <div class="card-content">
                     <ul>
-                        <li class="wk01-link"><span>Week 01: </span></li>
-                        <li class="wk02-link"><span>Week 02: </span></li>
-                        <li class="wk03-link"><span>Week 03: </span></li>
-                        <li class="wk04-link"><span>Week 04: </span></li>
-                        <li class="wk05-link"><span>Week 05: </span></li>
-                        <li class="wk06-link"><span>Week 06: </span></li>
+                        <li class="wk01"><span>Week 01: </span></li>
+                        <li class="wk02"><span>Week 02: </span></li>
+                        <li class="wk03"><span>Week 03: </span></li>
+                        <li class="wk04"><span>Week 04: </span></li>
+                        <li class="wk05"><span>Week 05: </span></li>
+                        <li class="wk06"><span>Week 06: </span></li>
                     </ul>
                 </div>
             </section>
