--- a/chamber/join.html
+++ b/chamber/join.html
@@ -77,7 +77,7 @@
                 <div class="rbuttons">
                     <label>
                         <input type="radio" id="npMem" name="membershipLevel" value="NP Membership">
-                        Non Profit Membership
+                        Nonprofit Membership
                     </label>
                     <label>
                         <input type="radio" id="bronzeMem" name="membershipLevel" value="Bronze Membership">
@@ -96,7 +96,7 @@
                     <table>
                         <tbody>
                             <tr>
-                                <th class="non-profit">Non-Profit Membership</th>
+                                <th class="non-profit">Nonprofit Membership</th>
                             </tr>
                             <tr>
                                 <td>Fee: No cost.</td>
