Directory page, css, js images

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -36,7 +36,7 @@
         <ul>
             <li><a href="./index.html">Chamber Home</a></li>
             <li class="active"><a href="#">Join the Chamber</a></li>
-            <li><a href="#">Business Directory</a></li>
+            <li><a href="./directory.html">Business Directory</a></li>
             <li><a href="./discover.html">Discover</a></li>
         </ul>
     </nav>
