--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -35,7 +35,7 @@
         <ul>
             <li><a href="./index.html">Chamber Home</a></li>
             <li><a href="./join.html">Join the Chamber</a></li>
-            <li><a href="#">Business Directory</a></li>
+            <li><a href="./directory.html">Business Directory</a></li>
             <li class="active"><a href="./discover.html">Discover</a></li>
         </ul>
     </nav>
