reduce img kb typos and fixes

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,10 +43,10 @@
     <main class="dir">
         <div class="toggle-menu">
             <button id="grid">
-                <img src="images/grid-icon.webp" alt="Switch to Grid View" />
+                <img src="images/grid-icon.webp" alt="Switch to Grid View">
             </button>
             <button id="list">
-                <img src="images/list-icon.webp" alt="Switch to List View" />
+                <img src="images/list-icon.webp" alt="Switch to List View">
             </button>        
         </div>
         <article class="grid">
