--- a/chamber/index.html
+++ b/chamber/index.html
@@ -75,6 +75,27 @@
                             <p>Temperature: <span id="temperature">--</span> °F</p>
                             <p>Condition: <span id="current-condition">--</span></p>
                         </div>
+                        <hr>
+                    <p>3-Day Forecast</p>
+                    <div id="forecast-container">
+                        
+                        <!-- Forecast for Day 1 -->
+                        <figure class="forecast-item">
+                            <img id="forecast-icon1" src="https://openweathermap.org/img/w/01d.png" alt="forecast weather icon">
+                            <figcaption id="forecast-caption1"></figcaption>
+                        </figure>
+                        <!-- Forecast for Day 2 -->
+                        <figure class="forecast-item">
+                            <img id="forecast-icon2" src="https://openweathermap.org/img/w/01d.png" alt="forecast weather icon">
+                            <figcaption id="forecast-caption2"></figcaption>
+                        </figure>
+                        <!-- Forecast for Day 3 -->
+                        <figure class="forecast-item">
+                            <img id="forecast-icon3" src="https://openweathermap.org/img/w/01d.png" alt="forecast weather icon">
+                            <figcaption id="forecast-caption3"></figcaption>
+                        </figure>
+                    </div>
+                    <hr>
                     </div>
                 </section>
                 <section class="card">
