--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,7 +27,7 @@
 </head>
 <body class="c-index">
     <header class="head-wrapper">
-        <img src="images/chamberLogo.png" alt="Logo FW Chamber of Commerce">
+        <img src="images/chamberLogo.webp" alt="Logo FW Chamber of Commerce">
         <div class="header-title"><h1><span>Greater Federal Way</span>
             <span>Chamber of Commerce</span></h1></div>
         <a id="menu" href="#"></a>
@@ -118,42 +118,22 @@
                                 <tbody>
                                     <!-- Data rows -->
                                     <tr>
-                                        <td>1 - 5</td>
-                                        <td>$401.50</td>
-                                        <td>$436.50</td>
+                                        <td>1 - 50</td>
+                                        <td>$501.50</td>
+                                        <td>$536.50</td>
                                     </tr>
                                     <tr>
-                                        <td>6 - 10</td>
-                                        <td>$451.00</td>
-                                        <td>$486.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>11 - 20</td>
-                                        <td>$539.00</td>
-                                        <td>$574.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>21 - 30</td>
-                                        <td>$660.00</td>
-                                        <td>$695.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>31 - 50</td>
-                                        <td>$830.50</td>
-                                        <td>$865.50</td>
-                                    </tr>
-                                    <tr>
-                                        <td>51 - 80</td>
+                                        <td>51 - 100</td>
                                         <td>$1,034.00</td>
                                         <td>$1,069.00</td>
                                     </tr>
                                     <tr>
-                                        <td>81 - 149</td>
+                                        <td>101 - 200</td>
                                         <td>$1,210.00</td>
                                         <td>$1,245.00</td>
                                     </tr>
                                     <tr>
-                                        <td>150 - 299</td>
+                                        <td>201 - 300</td>
                                         <td>$1,688.50</td>
                                         <td>$1,723.50</td>
                                     </tr>
@@ -224,7 +204,7 @@
     <footer>
         <div class="footer-content">
             <div class="f_logo">
-            <img src="images/chamberLogo.png" alt="Logo FW Chamber of Commerce"></div>
+            <img src="images/chamberLogo.webp" alt="Logo FW Chamber of Commerce"></div>
             <div class="f_name">
             <p>Greater Federal Way Chamber of Commerce</p></div>
             <div class="f_address">
